# profile

./: .gitignore  README.md
backend/golang/: go.mod
backend/python/: README.md  poetry.toml  pyproject.toml
backend/python/activities/: __init__.py  amazon_brazil_scraping.py
backend/python/container/: __init__.py  container.py
backend/python/services/: __init__.py  products_rag.py  runner.py
backend/python/workers/: scraper.py  starter.py  test.py
backend/python/workflows/: __init__.py  list_amazon_brazil_products.py
devops/container/: .env  Containerfile.connect.elasticsearch  Containerfile.connect.gcs  docker-compose.yaml
devops/container/connect/: elasticsearch-connector-config.json  register-connector.sh
