[tool.poetry]
name = "profile"
version = "0.1.0"
description = ""
authors = ["Victor França Lopes <18534956+vflopes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.42.0"
dependency-injector = "^4.41.0"
temporalio = "^1.5.1"
aiofiles = "^23.2.1"
kafka-python = "^2.0.2"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
langchain = "^0.1.16"
langchain-openai = "^0.1.4"
langchain-elasticsearch = "^0.1.3"
tiktoken = "^0.6.0"
elasticsearch = {extras = ["async"], version = "^8.13.0"}
openai = "^1.25.0"
langchain-text-splitters = "^0.0.1"
amazoncaptcha = "^0.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
